[gd_scene load_steps=2 format=3 uid="uid://blcb6chjtxvt1"]

[ext_resource type="Script" uid="uid://dhlwhvagcp6jv" path="res://scenes/bullets/Bullet.gd" id="1_2flq5"]

[node name="Bullet" type="CharacterBody2D" groups=["bullets"]]
collision_layer = 8
script = ExtResource("1_2flq5")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

[node name="DestroyTimer" type="Timer" parent="."]

[node name="BounceTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
